opam-version: "1.2"
name: "websocket-async"
version: "2.9"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-websocket"
bug-reports: "https://github.com/vbmithr/ocaml-websocket/issues"
dev-repo: "git://github.com/vbmithr/ocaml-websocket"

available: [
  ocaml-version >= "4.02.0"
]

tags: [
  "org:mirage"
  "org:xapi-project"
]
build: [ "jbuilder" "build" "-j" jobs "-p" name "@install" ]
depends: [
  "websocket" {= "2.9"}
  "async_ssl" {>= "v0.9"}
  "cohttp-async"
]