opam-version: "1.2"
name: "websocket"
version: "2.9"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-websocket"
bug-reports: "https://github.com/vbmithr/ocaml-websocket/issues"
dev-repo: "git://github.com/vbmithr/ocaml-websocket"

available: [
  ocaml-version >= "4.02.0"
]

tags: [
  "org:mirage"
  "org:xapi-project"
]
build: [ "jbuilder" "build" "-j" jobs "@install" ]
depends: [
  "jbuilder" {build}
  "conduit" {>= "0.14.0"}
  "cohttp" {>= "0.17.1"}
  "ocplib-endian" {>= "0.8"}
  "astring"
]

depopts: [
  "async_ssl"
  "lwt"
  "nocrypto"
  "cryptokit"
]

conflicts: [
  "lwt" {< "2.4.8"}
  "async_ssl" {< "114.35+03"}
  "nocrypto" {< "0.5.0"}
]
