opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-websocket"
bug-reports: "https://github.com/vbmithr/ocaml-websocket/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-websocket"
doc: "https://vbmithr.github.io/ocaml-websocket/doc"
tags: [
  "org:mirage"
  "org:xapi-project"
]
build: [ "dune" "build" "-j" jobs "-p" name ]
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "1.3.0"}
  "base64" {>= "3.3.0"}
  "conduit" {>= "2.0.2"}
  "cohttp" {>= "2.5.1"}
  "ocplib-endian" {>= "1.0"}
  "astring" {>= "0.8.3"}
]
synopsis: "Websocket library"
description: """
The WebSocket Protocol enables two-way communication between a client
running untrusted code in a controlled environment to a remote host
that has opted-in to communications from that code.

The security model used for this is the origin-based security model
commonly used by web browsers. The protocol consists of an opening
handshake followed by basic message framing, layered over TCP.

The goal of this technology is to provide a mechanism for
browser-based applications that need two-way communication with
servers that does not rely on opening multiple HTTP connections (e.g.,
using XMLHttpRequest or <iframe>s and long polling)."""
