(library
 (name websocket_lwt_unix)
 (public_name websocket-lwt-unix)
 (modules websocket_lwt_unix)
 (optional)
 (libraries lwt_log cohttp-lwt-unix websocket))

(library
 (name websocket_cohttp_lwt)
 (public_name websocket-lwt-unix.cohttp)
 (modules websocket_cohttp_lwt)
 (optional)
 (libraries websocket cohttp-lwt-unix))

(executable
 (name wscat)
 (public_name wscat-lwt)
 (package websocket-lwt-unix)
 (modules wscat)
 (libraries conduit-lwt-unix websocket-lwt-unix sexplib))
