(executable
 (name reynir)
 (modules reynir)
 (libraries conduit-lwt-unix websocket-lwt-unix))

(executable
 (name upgrade_connection)
 (modules upgrade_connection)
 (libraries lwt.unix logs.fmt logs.lwt websocket_cohttp_lwt))

(executable
 (name eio_upgrade_connection)
 (modules eio_upgrade_connection)
 (libraries eio_main websocket_eio))
